# meta-signal-listener

./: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  flake.nix  skills.md
schema/: lib.schema
src/: lib.rs
src/schema/: lib.rs
tests/: round_trip.rs
