[package]
name         = "meta-signal-listener"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-listener"
description  = "Meta signal contract for privileged Listener configuration."
publish      = false
links        = "meta-signal-listener"
build        = "build.rs"

[lib]
name = "meta_signal_listener"
path = "src/lib.rs"

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"
required-features = ["nota-text"]

[features]
default = []
nota-text = ["dep:nota", "signal-frame/nota-text", "signal-listener/nota-text"]

[dependencies]
nota            = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
rkyv            = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame    = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-listener = { git = "https://github.com/LiGoldragon/signal-listener.git", branch = "main", default-features = false }
thiserror       = "2"

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
